Improving swot table

--- a/app/assets/stylesheets/plans.scss
+++ b/app/assets/stylesheets/plans.scss
@@ -25,3 +25,60 @@
   box-shadow: 1px 1px 1px 0 rgba(0,0,0,0.3) ;
   text-shadow: 1px 1px 1px rgba(0,0,0,0.2) ;
 }
+
+.background-blue {
+  background-color: #44c3d5;
+}
+
+.background-blue-dark {
+  background-color: #2e7394;
+
+}
+
+.background-blue-light {
+  background-color: #84A2BA;
+}
+
+.background-red {
+  background-color: #F06672;
+}
+
+.background-red-dark {
+  background-color: #b13c3d;
+}
+
+.background-red-light {
+  background-color: #ECB3B3;
+
+}
+
+.background-green {
+  background-color: #39bc8a;
+}
+
+.background-green-dark {
+  background-color: #0f9962;
+
+}
+
+.background-green-light {
+  background-color: #86B693;
+}
+
+.background-orange {
+  background-color: #FAB963;
+}
+
+.background-orange-dark {
+  background-color: #d6951f;
+
+}
+
+.background-orange-light {
+  background-color: #CAAA83;
+}
+
+
+.background-gray {
+  background-color: #565354;
+}
