--- a/app/views/missions/_mission.html.erb
+++ b/app/views/missions/_mission.html.erb
@@ -1,17 +1,26 @@
-<tr>
-  <td><%= mission.purpose_of_life %></td>
-  <td><%= mission.who_am_i %></td>
-  <td><%= mission.why_exist %></td>
-  <td><%= mission.created_at.strftime("%d/%m/%Y") %></td>
-
-  <td><%= link_to "Selecionar", missions_update_selected_mission_path(mission.id),
-                  class:"btn btn-primary"
-          %></td>
-  <td><%= link_to "Editar", edit_mission_path(mission),
-          class:"btn btn-default"
-          %></td>
-  <td><%= link_to "Remover", mission, method: :delete,
-          class:"btn btn-danger",
-          data: {confirm: "Tem certeza que deseja remover essa missão? #{mission.purpose_of_life}" }
-          %></td>
-</tr>
+<div class="col-sm-6">
+  <div class="card">
+    <div class="card-body">
+      <h5 class="card-header">Missão <%= mission.id %></h5>
+      <div class="padding-all">
+        <h5 class="card-title">Propósito de Vida</h5>
+        <p class="card-text"><%= mission.purpose_of_life %></p>
+        <h5 class="card-title">Quem eu sou</h5>
+        <p class="card-text"><%= mission.who_am_i %></p>
+        <h5 class="card-title">Porque existo</h5>
+        <p class="card-text"><%= mission.why_exist %></p>
+        <%= link_to "Selecionar",
+                    missions_update_selected_mission_path(mission.id),
+                    class:"btn btn-primary" %>
+        <%= link_to "Editar",
+                    edit_mission_path(mission),
+                    class:"btn btn-default" %>
+        <%= link_to "Remover", mission,
+                    method: :delete,
+                    class:"btn btn-danger",
+                    data: {confirm: "Tem certeza que deseja remover essa missão? #{mission.purpose_of_life}" } %>
+      </div>
+    </div>
+    <div class="card-footer bg-transparent border-success"><%= mission.created_at.strftime("%d/%m/%Y") %></div>
+  </div>
+</div>
