--- a/app/views/plans/myplan.html.erb
+++ b/app/views/plans/myplan.html.erb
@@ -1,4 +1,7 @@
 <div class="container">
+
+  <%= link_to "Alterar Plano", plans_path, method: "get", class: "btn btn-default" %>
+
   <h2>Matriz SWOT</h2>
   <hr/>
 
@@ -16,4 +19,7 @@
   <%= "#{@my_mission.who_am_i}" %>
   <p>Porque existo</p>
   <%= "#{@my_mission.why_exist}" %>
+
+  <%= link_to "Alterar Missão", plans_path, method: "get", class: "btn btn-default" %>
+
 </div>
