Changing name of assets application.css and application.js to production

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,13 +12,13 @@
  *
  *= require_tree .
  *= require_self
- *= require theme/animate.min
- *= require theme/bootstrap.min
- *= require theme/font-awesome.min
- *= require theme/templatemo-style
- *= require login/mainlogin
- *= require login/util
- *= require login/icon-font.min
+ *= require theme/animate.min.css
+ *= require theme/bootstrap.min.css
+ *= require theme/font-awesome.min.css
+ *= require theme/templatemo-style.css
+ *= require login/mainlogin.css
+ *= require login/util.css
+ *= require login/icon-font.min.css
  */
 
 
