--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,68 +1,72 @@
-<h2>Editar usuário</h2>
-<hr/>
+<div class="container">
+  <h2>Editar usuário</h2>
+  <hr/>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {method: :put}) do |form| %>
-  <%= devise_error_messages! %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {method: :put}) do |form| %>
+    <%= devise_error_messages! %>
 
-  <div class="row">
-    <div class="col-sm-6">
-      <div class="form-group">
-        <%= form.label "E-mail" %><br/>
-        <%= form.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="form-group">
+          <%= form.label "E-mail" %><br/>
+          <%= form.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="row">
-    <div class="col-sm-6">
-      <div class="form-group">
-        <%= form.label "Nome" %><br/>
-        <%= form.text_field :name, autofocus: true, autocomplete: "name", class: "form-control" %>
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="form-group">
+          <%= form.label "Nome" %><br/>
+          <%= form.text_field :name, autofocus: true, autocomplete: "name", class: "form-control" %>
+        </div>
       </div>
     </div>
-  </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <% end %>
+
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="form-group">
+          <%= form.label "Senha" %> <i>(Deixe em branco se não quiser mudar)</i><br/>
+          <%= form.password_field :password, autocomplete: "new-password", class: "form-control" %>
+          <% if @minimum_password_length %>
+            <em><%= @minimum_password_length %> caracteres no mínimo</em>
+          <% end %>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="form-group">
+          <%= form.label "Confirmação de senha" %><br/>
+          <%= form.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="form-group">
+          <%= form.label "Senha atual" %> <i>(precisamos da sua senha atual para confirmar mudanças)</i><br/>
+          <%= form.password_field :current_password, autocomplete: "current-password", class: "form-control" %>
+        </div>
+      </div>
+    </div>
+
+    <%= form.submit "Atualizar", class: "btn btn-primary btn-margin-bottom" %>
+
   <% end %>
 
-  <div class="row">
-    <div class="col-sm-6">
-      <div class="form-group">
-        <%= form.label "Senha"%> <i>(Deixe em branco se não quiser mudar)</i><br/>
-        <%= form.password_field :password, autocomplete: "new-password", class: "form-control" %>
-        <% if @minimum_password_length %>
-          <em><%= @minimum_password_length %> caracteres no mínimo</em>
-        <% end %>
-      </div>
-    </div>
-  </div>
+  <h3>Cancelar minha conta</h3>
+  <hr/>
 
-  <div class="row">
-    <div class="col-sm-6">
-      <div class="form-group">
-        <%= form.label "Confirmação de senha" %><br/>
-        <%= form.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
-      </div>
-    </div>
-  </div>
+  <p>Não gostou do Life to
+    Remind? <%= button_to "Cancelar minha conta", registration_path(resource_name), data: {confirm: "Are you sure?"}, method: :delete, class: "btn btn-danger btn-margin-bottom" %></p>
 
-  <div class="row">
-    <div class="col-sm-6">
-      <div class="form-group">
-        <%= form.label "Senha atual" %> <i>(precisamos da sua senha atual para confirmar mudanças)</i><br/>
-        <%= form.password_field :current_password, autocomplete: "current-password", class: "form-control" %>
-      </div>
-    </div>
-  </div>
+  <%= link_to "Voltar", :back, class: "btn btn-default btn-margin-bottom" %>
 
-  <%= form.submit "Atualizar", class:"btn btn-primary btn-margin-bottom" %>
-
-<% end %>
-
-<h2>Cancelar minha conta</h2>
-<hr/>
-
-<p>Não gostou do Life to Remind? <%= button_to "Cancelar minha conta", registration_path(resource_name), data: {confirm: "Are you sure?"}, method: :delete, class:"btn btn-danger btn-margin-bottom" %></p>
-
-<%= link_to "Voltar", :back, class:"btn btn-default btn-margin-bottom" %>
+</div>
