Initial card for examples in plans and mission

--- a/app/views/missions/new.html.erb
+++ b/app/views/missions/new.html.erb
@@ -1,1 +1,26 @@
-<%= render partial: "form", locals: { texto_da_acao: "Criar" } %>
+<div class="container">
+  <p>
+  <div class="card">
+    <div class="card-footer bg-transparent border-success" data-toggle="collapse" data-target="#minha-missao" role="button" aria-expanded="true" aria-controls="minha-missao">Exemplo</div>
+  </div>
+  </p>
+  <div class="collapse" id="minha-missao" aria-expanded="false" aria-controls="minha-missao">
+    <div class="card card-body padding-all">
+      <h5 class="card-title">Propósito de Vida</h5>
+      <p class="card-text">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
+        squid. Nihil anim keffiyeh
+        helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</p>
+      <h5 class="card-title">Quem eu sou</h5>
+      <p class="card-text">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
+        squid. Nihil anim keffiyeh
+        helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</p>
+      <h5 class="card-title">Porque existo</h5>
+      <p class="card-text">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
+        squid. Nihil anim keffiyeh
+        helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</p>
+    </div>
+  </div>
+
+  <%= render partial: "form", locals: {texto_da_acao: "Criar"} %>
+
+</div>
