--- a/app/views/plans/myplan.html.erb
+++ b/app/views/plans/myplan.html.erb
@@ -20,7 +20,7 @@
     <p>Porque existo</p>
     <%= "#{@my_mission.why_exist}" %>
 
-    <%= link_to "Alterar Missão", plans_path, method: "get", class: "btn btn-default" %>
+    <%= link_to "Alterar Missão", missions_path, method: "get", class: "btn btn-default" %>
   <% else %>
     <p>Parece que você ainda não criou um planejamento.</p>
     <%= link_to "Crie um novo plano", new_plan_path, method: "get", class: "btn btn-default" %>
