--- a/app/views/swotparts/edit.html.erb
+++ b/app/views/swotparts/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing swotpart</h1>
+<div class="container">
 
-<%= render 'form', swotpart: @swotpart %>
+  <h1>Edição de campo</h1>
 
-<%= link_to 'Show', @swotpart %> |
-<%= link_to 'Back', swotparts_path %>
+  <%= render 'form', swotpart: @swotpart %>
+
+</div>
