--- a/app/views/home/_team.html.erb
+++ b/app/views/home/_team.html.erb
@@ -7,7 +7,7 @@
       </div>
       <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="1.3s">
         <div class="team-wrapper">
-          <img src="/assets/team-img2.jpg" class="img-responsive" alt="team img 1">
+          <%= image_tag("team-img2.jpg", alt: "team img 1", class: "img-responsive") %>
           <div class="team-des">
             <h4>TRACY</h4>
             <span>Designer</span>
@@ -17,7 +17,7 @@
       </div>
       <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="1.6s">
         <div class="team-wrapper">
-          <img src="/assets/team-img2.jpg" class="img-responsive" alt="team img 2">
+          <%= image_tag("team-img2.jpg", alt: "team img 2", class: "img-responsive") %>
           <div class="team-des">
             <h4>MARY</h4>
             <span>Developer</span>
@@ -27,7 +27,7 @@
       </div>
       <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="1.3s">
         <div class="team-wrapper">
-          <img src="/assets/team-img2.jpg" class="img-responsive" alt="team img 3">
+          <%= image_tag("team-img2.jpg", alt: "team img 3", class: "img-responsive") %>
           <div class="team-des">
             <h4>JULIA</h4>
             <span>Director</span>
@@ -37,7 +37,7 @@
       </div>
       <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="1.6s">
         <div class="team-wrapper">
-          <img src="/assets/team-img2.jpg" class="img-responsive" alt="team img 4">
+          <%= image_tag("team-img2.jpg", alt: "team img 4", class: "img-responsive") %>
           <div class="team-des">
             <h4>LINDA</h4>
             <span>Manager</span>
