--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -124,7 +124,7 @@
       </div>
       <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
         <div class="portfolio-thumb">
-          <img src="/assets/portfolio-img1.jpg" class="img-responsive" alt="portfolio img 1">
+          <%= image_tag("portfolio-img1.jpg", alt: "portfolio img 1", class: "img-responsive") %>
           <div class="portfolio-overlay">
             <h4>Project One</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
@@ -134,7 +134,7 @@
       </div>
       <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
         <div class="portfolio-thumb">
-          <img src="/assets/portfolio-img2.jpg" class="img-responsive" alt="portfolio img 2">
+          <%= image_tag("portfolio-img2.jpg", alt: "portfolio img 2", class: "img-responsive") %>
           <div class="portfolio-overlay">
             <h4>Project Two</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
@@ -144,7 +144,7 @@
       </div>
       <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
         <div class="portfolio-thumb">
-          <img src="/assets/portfolio-img3.jpg" class="img-responsive" alt="portfolio img 3">
+          <%= image_tag("portfolio-img3.jpg", alt: "portfolio img 3", class: "img-responsive") %>
           <div class="portfolio-overlay">
             <h4>Project Three</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
@@ -154,7 +154,7 @@
       </div>
       <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
         <div class="portfolio-thumb">
-          <img src="/assets/portfolio-img4.jpg" class="img-responsive" alt="portfolio img 4">
+          <%= image_tag("portfolio-img1.jpg", alt: "portfolio img 1", class: "img-responsive") %>
           <div class="portfolio-overlay">
             <h4>Project Four</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
@@ -164,7 +164,7 @@
       </div>
       <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
         <div class="portfolio-thumb">
-          <img src="/assets/portfolio-img3.jpg" class="img-responsive" alt="portfolio img 3">
+          <%= image_tag("portfolio-img3.jpg", alt: "portfolio img 3", class: "img-responsive") %>
           <div class="portfolio-overlay">
             <h4>Project Five</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
@@ -174,7 +174,7 @@
       </div>
       <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
         <div class="portfolio-thumb">
-          <img src="/assets/portfolio-img4.jpg" class="img-responsive" alt="portfolio img 4">
+          <%= image_tag("portfolio-img4.jpg", alt: "portfolio img 4", class: "img-responsive") %>
           <div class="portfolio-overlay">
             <h4>Project Six</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
@@ -184,7 +184,7 @@
       </div>
       <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
         <div class="portfolio-thumb">
-          <img src="/assets/portfolio-img1.jpg" class="img-responsive" alt="portfolio img 1">
+          <%= image_tag("portfolio-img1.jpg", alt: "portfolio img 1", class: "img-responsive") %>
           <div class="portfolio-overlay">
             <h4>Project Seven</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
@@ -194,7 +194,7 @@
       </div>
       <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
         <div class="portfolio-thumb">
-          <img src="/assets/portfolio-img2.jpg" class="img-responsive" alt="portfolio img 2">
+          <%= image_tag("portfolio-img2.jpg", alt: "portfolio img 2", class: "img-responsive") %>
           <div class="portfolio-overlay">
             <h4>Project Eight</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
