Generating new assets and renaming .css to .scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,13 +12,13 @@
  *
  *= require_tree .
  *= require_self
- *= require theme/animate.min.css
- *= require theme/bootstrap.min.css
- *= require theme/font-awesome.min.css
- *= require theme/templatemo-style.css
- *= require login/mainlogin.css
- *= require login/util.css
- *= require login/icon-font.min.css
+ *= require theme/animate.min.scss
+ *= require theme/bootstrap.min.scss
+ *= require theme/font-awesome.min.scss
+ *= require theme/templatemo-style.scss
+ *= require login/mainlogin.scss
+ *= require login/util.scss
+ *= require login/icon-font.min.scss
  */
 
 
