--- a/app/views/objectives/new.html.erb
+++ b/app/views/objectives/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Objective</h1>
+<div class="container">
+  <h1>Novo Objetivo</h1>
 
-<%= render 'form', objective: @objective %>
+  <%= render 'form', objective: @objective %>
 
-<%= link_to 'Back', objectives_path %>
+  <%= link_to 'Voltar', objectives_path, class: "btn btn-default" %>
+</div>
