--- a/app/views/objectives/edit.html.erb
+++ b/app/views/objectives/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing Objective</h1>
+<div class="container">
+  <h1>Editar Objetivo Estratégico</h1>
 
-<%= render 'form', objective: @objective %>
+  <%= render 'form', objective: @objective %>
 
-<%= link_to 'Show', @objective %> |
-<%= link_to 'Back', objectives_path %>
+  <%= link_to "Voltar", objectives_path, class:"btn btn-default" %>
+</div>
