--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -43,6 +43,10 @@
         <div class="container-login100-form-btn p-t-25">
           <%= form.submit "Cadastrar", class: "login100-form-btn" %>
         </div>
+        <span class="txt1">
+          Ao se cadastrar, você concorda com nossos termos de uso e política de privacidade.
+        </span>
+
       <% end %>
 
       <div class="text-center w-full p-t-115">
