--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,7 +8,7 @@
         <span class="icon icon-bar"></span>
       </button>
       <%= link_to root_path, method: "get" do %>
-        <%= image_tag "ltr.svg", class: "resize-navbrand p-t-10" %>
+        <%= image_tag("ltr.svg", alt:"logo img 1", class: "image-responsive resize-navbrand p-t-10") %>
       <% end %>
     </div>
     <div class="collapse navbar-collapse">
